--- a/index.html
+++ b/index.html
@@ -4,34 +4,88 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JYT!!</title>
-  <meta property="og:title" content="이 남자는 무료로 해줍니다">
-  <meta property="og:description" content="JYT의 유래에 대해서 알아봅시다... 준엽이의 꿈은 선생님이었고요...">
+  <title>내 이름은 정인영</title>
+  <meta property="og:title" content="Hello world">
+  <meta property="og:description" content="My name is Inyoung">
   <meta property="og:image" content="./jyt.jpg">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header></header>
-  <main>
-    <div id="top"></div>
-    <div id="container">
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+
+    <div id="main-container">
+        <header><p>
+          멋 쟁 이 사 자 처 럼
+        </p></header>
+      <main>
+        <div id="top">Look at my profile :)</div>
+        <div id="container">
+          <section>
+          <p >
+            이름 : 정인영 <br>
+            직  책 : 프론트엔드<br>
+            생년월일 : 2001.12.15<br>
+            학과: 아트엔테크놀리지 20<br>
+            취미: 각종 스포츠, 피아노
+          </p>
+        </section>
+          <section id="mbti">
+            <p>
+              <br><br><strong>MBTI</strong><br><br><strong>ESFJ</strong>
+            </p>
+          </section>
+          <section id="nba">
+            <div class="bg"></div>
+            <p>
+              <br><br><br>요즘 관심사<br>NBA 보기 <br> (골든스테이트 팬이에요)
+            </p>
+          </section>
+          <section id="movie">
+            <p>
+              <br>
+              인생영화 <br>
+              어바웃 타임
+            </p>
+          </section>
+          <section>
+            <p>
+              <br>
+              오늘의 TMI <br>
+              아침에 등교하다가 미끄러졌어요.. <br>
+              다들 조심 <br>
+              금요일 날 휴강 야호 ^^
+              
+            </p>
+          </section>
+          <section id="youtube">
+            <div class="bbg"></div>
+            <p><br><br>
+              자주 보는 유튜브 채널 <br>
+              별놈들 : 문돼의 온도 <br>
+              빠니보틀, 곽튜브 
+            </p>
+          </section>
+        </div>
+
+        <aside>
+          <div id="team">
+            <p>
+              1. 정인영은 코로나에 4번 걸렸다. <br><br>
+              2. 송경호가 키우는 고양이는 9kg이다. <br><br>
+              3. 강민석의 시력은 왼 0.1 오 1.0이다. 
+
+            </p>
+          </div>
+          <div id="hi">
+            <p>
+              프론트엔드 개발자가 <br><br>되는 그날까지 ^~^
+            </p>
+          </div>
+        </aside>
+
+      </main>
+      <footer>
+        <p>
+          Copyright: 2023 서강대학교 멋쟁이사자처럼 4/5 mini-project session.. 
+        </p>
+      </footer>
     </div>
-
-    <aside>
-      <div id="team"></div>
-      <div id="hi"></div>
-    </aside>
-
-  </main>
-  <footer></footer>
-
-
-  
-</body>
 </html>
