--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>내 이름은 정인영</title>
-  <meta property="og:title" content="Hello world">
-  <meta property="og:description" content="My name is Inyoung">
+  <meta property="og:title" content="이한영">
+  <meta property="og:description" content="엉덩이 짱크다">
   <meta property="og:image" content="./jyt.jpg">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
     <div id="main-container">
         <header><p>
-          멋 쟁 이 사 자 처 럼
+          Like Lion Sogang University Mini Project
         </p></header>
       <main>
         <div id="top">Look at my profile :)</div>
@@ -35,7 +35,7 @@
           <section id="nba">
             <div class="bg"></div>
             <p>
-              <br><br><br>요즘 관심사<br>NBA 보기 <br> (골든스테이트 팬이에요)
+              <br><br>요즘 관심사<br>NBA 보기 <br> (골든스테이트 팬이에요)
             </p>
           </section>
           <section id="movie">
@@ -47,11 +47,10 @@
           </section>
           <section>
             <p>
-              <br>
               오늘의 TMI <br>
               아침에 등교하다가 미끄러졌어요.. <br>
-              다들 조심 <br>
-              금요일 날 휴강 야호 ^^
+              다들 조심하십셔 <br>
+              금요일 날 휴강 <strong>야호^^</strong>
               
             </p>
           </section>
@@ -84,7 +83,7 @@
       </main>
       <footer>
         <p>
-          Copyright: 2023 서강대학교 멋쟁이사자처럼 4/5 mini-project session.. 
+          Copyright @ 2023 서강대학교 멋쟁이사자처럼 정인영 All right reserved
         </p>
       </footer>
     </div>
