--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>내 이름은 정인영</title>
   <meta property="og:title" content="이한영">
-  <meta property="og:description" content="엉덩이 짱크다">
-  <meta property="og:image" content="./jyt.jpg">
+  <meta property="og:description" content="엉덩이가 큰 여자">
+  <meta property="og:image" content="./han0.jpeg">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
