--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>내 이름은 정인ㅋ영</title>
+  <title>내 이름은 정인ㅋㅋㅋ영</title>
   <meta property="og:title" content="나를 소개하도록ㅋ하지">
   <meta property="og:description" content="크킄">
   <meta property="og:image" content="./han0.jpeg">
